# multi-sandbox

./: .gitignore  README.md
agent-loops/macbook-security-loop/: README.md  loop.py  operator-directives.md  prompt.md  run-notes.md  test_loop.py  verify-prompt.md
attic/: TODO.md  gitlab-ci.yml  prompt-readme.md
branch-header-extension/: DESIGN.md  PRD.md  background.js  config.js  manifest.json  popup.html  popup.js
games/kid-bot-battle-sim/features/: AGENTS.md  (+1 more)
games/robotext-battle/: README.md  game-design.md  main.py  pyproject.toml
games/robotext-battle/assets/: config.yaml  enemies.yaml  items.yaml
games/robotext-battle/robotext/: __init__.py  assets.py  battle.py  cli.py  models.py  shop.py  state.py
games/robotext-battle/tests/: __init__.py  test_assets.py  test_battle.py  test_integration.py  test_models.py  test_shop.py
games/sillyapp/: CLAUDE.md
games/snake/: .gitignore  INSTRUCTIONS.md  README.md  app.py  pyproject.toml
infra/ai-lint-toolkit/: Dockerfile  docker-compose.yaml
infra/aws/: terraform.tfstate
infra/mac-setup/: NOTES.md  bootstrap.sh  com.homebrew.attestation.plist  playbook.yml  security-scan-setup.yml
infra/openclaw-k8s/: configmap.yaml  namespace.yaml  network-policy.yaml  pvc.yaml  resource-quota.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
llm-client/: README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
macos-utils/: cleanup-scan.py
mods/hoi4/: README.md  canada-overpowered.mod
openclaw-skills/linear/: SKILL.md
(+249 files in other folders)
